# wayland_mpp_video_player

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
mpp/: CMakeLists.txt  CMakeLists.txt.bk
mpp/install/lib/: librockchip_vpu.so.0
mpp/install/lib/pkgconfig/: rockchip_mpp.pc  rockchip_vpu.pc
mpp/temp/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  rockchip_mpp.pc  rockchip_vpu.pc
mpp/temp/mpp/: Makefile  cmake_install.cmake
mpp/temp/mpp/base/: Makefile  cmake_install.cmake
mpp/temp/mpp/base/test/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/av1/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/avs/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/avs2/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/common/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/dummy/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/h263/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/h264/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/h265/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/jpeg/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/m2v/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/mpg4/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/vp8/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/dec/vp9/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/enc/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/enc/dummy/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/enc/h264/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/enc/h265/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/enc/jpeg/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/enc/vp8/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/rc/: Makefile  cmake_install.cmake
mpp/temp/mpp/codec/rc/test/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/common/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/common/av1/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/common/h264/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/common/h265/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/common/jpeg/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/dummy/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkdec/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkdec/av1d/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkdec/avs2d/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkdec/avsd/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkdec/h264d/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkdec/h265d/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkdec/vp9d/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkenc/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkenc/common/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkenc/h264e/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkenc/h265e/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/rkenc/jpege/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/av1d/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/common/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/h263d/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/h264e/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/jpegd/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/jpege/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/m2vd/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/mpg4d/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/vp8d/: Makefile  cmake_install.cmake
mpp/temp/mpp/hal/vpu/vp8e/: Makefile  cmake_install.cmake
mpp/temp/mpp/legacy/: Makefile  cmake_install.cmake
mpp/temp/mpp/vproc/: Makefile  cmake_install.cmake
mpp/temp/mpp/vproc/iep/: Makefile  cmake_install.cmake
mpp/temp/mpp/vproc/iep/test/: Makefile  cmake_install.cmake
mpp/temp/mpp/vproc/iep2/: Makefile  cmake_install.cmake
mpp/temp/mpp/vproc/iep2/test/: Makefile  cmake_install.cmake
mpp/temp/mpp/vproc/rga/: Makefile  cmake_install.cmake
mpp/temp/mpp/vproc/rga/test/: Makefile  cmake_install.cmake
mpp/temp/mpp/vproc/vdpp/: Makefile  cmake_install.cmake
mpp/temp/mpp/vproc/vdpp/test/: Makefile  cmake_install.cmake
mpp/temp/osal/: Makefile  cmake_install.cmake
mpp/temp/osal/test/: Makefile  cmake_install.cmake  mpp_dmabuf_test  mpp_env_test  mpp_eventfd_test  mpp_log_test  mpp_mem_pool_test  mpp_mem_test  mpp_platform_test  mpp_runtime_test  mpp_thread_test  mpp_time_test  mpp_trace_test
mpp/temp/test/: Makefile  cmake_install.cmake
mpp/temp/utils/: Makefile  cmake_install.cmake
src/: Makefile  cmake_config.h.in  config.h  egl_display.cpp  egl_display.h  log.h  main.cpp  mediaPlayer.cpp  mediaPlayer.h  media_time.h  media_time_impl.cpp  media_time_impl.h  media_util.cpp  media_util.h  mppDisplayInfo.h  mpp_rga.cpp  mpp_rga.h  mpp_video_frame.h  mpp_video_frame_thread_safe.cpp  mpp_video_frame_thread_safe.h  packet_queue.cpp  packet_queue.h  rockchip_rgarect.h  rockchip_v4l2_rga.cpp  rockchip_v4l2_rga.h  stream_info.h  system_time.cpp  system_time.h  thread_wrapper.cpp  thread_wrapper.h  video_frame.h  xdg-shell-protocol.cpp
src/rkdrm/: bo.cpp  bo.h  dev.cpp  dev.h  modeset.cpp  modeset.h
src/rkrga/: RGA.cpp  RGA.h
